gitops/config/keycloak/manifests/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: keycloak
  namespace: security
spec:
  hosts:
    - iam.nieri0x73.com
  gateways:
    - keycloak
  http:
    - route:
        - destination:
            host: keycloak
            port:
              number: 80
